# BioniumX

./: README.md  pyproject.toml  requirements.txt
bioniumx/: __init__.py
bioniumx/detection/: __init__.py  bayesian.py  equivalent_width.py
bioniumx/io/: __init__.py  hdf5.py
bioniumx/molecules/: __init__.py  catalog.py
bioniumx/physics/: __init__.py  atmosphere.py  habitability.py
bioniumx/preprocessing/: __init__.py  filters.py  masking.py  normalizer.py
bioniumx/tests/: test_physics.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: bioniumx.datasets.rst  bioniumx.detection.rst  bioniumx.io.rst  bioniumx.modeling.rst  bioniumx.models.rst  bioniumx.molecules.rst  bioniumx.physics.rst  bioniumx.preprocessing.rst  bioniumx.rst  bioniumx.simulator.rst  bioniumx.spectra.rst  modules.rst
