[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioniumx"
version = "0.2.0"
description = "Biosignature detection in exoplanet atmospheres — scientific Python library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bionium-X Research Collaborative" }]

# CORE: lightweight, installs in seconds
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "astropy>=5.0",
    "matplotlib>=3.5.0",
    "h5py>=3.8.0",
    "pooch>=1.6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
# Scientific extras (recommended)
science = [
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "numba>=0.57.0",
    "pymc>=5.0.0",
    "emcee>=3.0.0",
    "corner>=2.2.0",
]
# Deep learning (heavy, optional)
ml = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
]
# Development
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "sphinx>=7.0",
    "sphinx-astropy",
    "nbsphinx",
    "tox",
    "black",
    "pre-commit",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
]
# All recommended scientific tools
full = ["bioniumx[science,ml]"]

[tool.setuptools.packages.find]
include = ["bioniumx*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["bioniumx/tests"]
addopts = "--cov=bioniumx --cov-report=term-missing"
